# osheems

./: .gitignore  Cargo.toml  shell.nix
crates/common/: Cargo.toml  README.MD
crates/common/examples/: test_bootstrap.rs  test_driver.rs  test_interface_manager.rs  test_mqtt.rs  test_shelly.rs  test_templates.rs
crates/common/src/: entities.rs  lib.rs  relations.rs  settings.rs  telemetry.rs  templates.rs  traits.rs  users.rs
crates/common/src/core_bus/: dispatcher.rs  manager.rs  mod.rs  runner.rs  types.rs
crates/common/src/db/: bootstrap.rs  main_db.rs  mod.rs  telemetry_db.rs
crates/common/src/engines/execution/: engine.rs  mod.rs
crates/common/src/managers/: mod.rs
crates/common/src/managers/database/: manager.rs  mod.rs
crates/common/src/managers/device/: manager.rs  mod.rs
crates/common/src/managers/driver/: manager.rs  mod.rs
crates/common/src/managers/gateway/: manager.rs  mod.rs
crates/common/src/managers/interface/: i2c.rs  manager.rs  mod.rs  network.rs  uart.rs
crates/common/src/managers/template/: manager.rs  mod.rs
crates/common/src/runners/: mod.rs  mqtt.rs
crates/core/: Cargo.toml
crates/core/src/: main.rs
crates/edge/: Cargo.toml
templates/default/scripts/: main.rhai
templates/devices/shelly/pro3em/: template.json
templates/devices/shelly/pro3em/mappings/: mqtt.json
templates/devices/shelly/pro3em/maps/: modbus.json  mqtt.json
templates/devices/shelly/pro3em/scripts/: main.rhai
templates/gateways/mqtt/: template.json
templates/gateways/mqtt/scripts/: main.rhai
ui/mobile/: Cargo.toml
ui/web/: Cargo.toml
