[package]
name = "osheems-common"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir.workspace = true
log.workspace = true
env_logger.workspace = true

[features]
default = ["native"]
native = ["dep:rusqlite", "dep:chrono"]
