[package]
name = "osheems-common"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
i2cdev.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport.workspace = true
tokio.workspace = true
tokio-serial.workspace = true
walkdir.workspace = true
log.workspace = true
env_logger.workspace = true
rhai.workspace = true
rumqttc.workspace = true

[features]
default = ["native"]
native = ["dep:rusqlite", "dep:chrono"]
