[package]
name = "osheems-core"
version.workspace = true
edition.workspace = true

[dependencies]
osheems-common = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rhai = { workspace = true }
serde_json = { workspace = true }
